--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "activationCommands": {
     "atom-workspace": "rails-server:restart"
   },
-  "repository": "https://github.com/Otterpocket/atom-rails-server",
+  "repository": "git@github.com:Otterpocket/atom-rails-server.git",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
